NiklausParser.java
// $ANTLR 3.4 C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g 2012-04-26 12:08:39

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class NiklausParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADDITION", "BEGIN", "BODY", "CLOSINGPARENTHESIS", "COLON", "COMMA", "COMMENT", "COMPARISON", "CONST", "COUNT", "DECIMALPOINT", "DECLARATIONS", "DEFINEDAS", "DIGIT", "DIVISION", "DO", "DOUBLEQUOTE", "ELSE", "END", "EQUALITY", "EXPONENT", "FLOAT", "FUNCTION", "GREATERTHAN", "GREATERTHANOREQUAL", "IDENTIFIER", "IF", "INTEGER", "LESSTHAN", "LESSTHANOREQUAL", "LETTER", "MODULE", "MULTIPLICATION", "NEGATE", "NONEQUALITY", "OPENINGPARENTHESIS", "OUTPUT", "PARAM", "POSITIVE", "PROCEDURE", "REPEAT", "SEMI", "SIGN", "STRINGLITERAL", "SUBTRACTION", "THEN", "TYPE", "UNTIL", "VAR", "WHILE", "WS"
    };

    public static final int EOF=-1;
    public static final int ADDITION=4;
    public static final int BEGIN=5;
    public static final int BODY=6;
    public static final int CLOSINGPARENTHESIS=7;
    public static final int COLON=8;
    public static final int COMMA=9;
    public static final int COMMENT=10;
    public static final int COMPARISON=11;
    public static final int CONST=12;
    public static final int COUNT=13;
    public static final int DECIMALPOINT=14;
    public static final int DECLARATIONS=15;
    public static final int DEFINEDAS=16;
    public static final int DIGIT=17;
    public static final int DIVISION=18;
    public static final int DO=19;
    public static final int DOUBLEQUOTE=20;
    public static final int ELSE=21;
    public static final int END=22;
    public static final int EQUALITY=23;
    public static final int EXPONENT=24;
    public static final int FLOAT=25;
    public static final int FUNCTION=26;
    public static final int GREATERTHAN=27;
    public static final int GREATERTHANOREQUAL=28;
    public static final int IDENTIFIER=29;
    public static final int IF=30;
    public static final int INTEGER=31;
    public static final int LESSTHAN=32;
    public static final int LESSTHANOREQUAL=33;
    public static final int LETTER=34;
    public static final int MODULE=35;
    public static final int MULTIPLICATION=36;
    public static final int NEGATE=37;
    public static final int NONEQUALITY=38;
    public static final int OPENINGPARENTHESIS=39;
    public static final int OUTPUT=40;
    public static final int PARAM=41;
    public static final int POSITIVE=42;
    public static final int PROCEDURE=43;
    public static final int REPEAT=44;
    public static final int SEMI=45;
    public static final int SIGN=46;
    public static final int STRINGLITERAL=47;
    public static final int SUBTRACTION=48;
    public static final int THEN=49;
    public static final int TYPE=50;
    public static final int UNTIL=51;
    public static final int VAR=52;
    public static final int WHILE=53;
    public static final int WS=54;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public NiklausParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public NiklausParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return NiklausParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g"; }



    public Error err = new Error(System.err);

    public void displayRecognitionError(String[] tokenNames, RecognitionException e) {
                        String msg = getErrorMessage(e, tokenNames);
                        err.error(e.line, e.charPositionInLine, msg);     
                        Niklaus.fail = true; 
     }
     
      //Stop after first error
     @Override
      protected Object recoverFromMismatchedToken(IntStream input, int ttype, BitSet follow) throws RecognitionException {
        throw new MismatchedTokenException(ttype, input);
      }

      @Override
      public Object recoverFromMismatchedSet(IntStream input, RecognitionException e, BitSet follow) throws RecognitionException {
        throw e;
      }
      //stop after first error


    public static class module_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "module"
    // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:53:1: module : MODULE IDENTIFIER SEMI ( declaration ( SEMI declaration )* )? BEGIN ( statement ( SEMI statement )* )? END SEMI EOF -> ^( MODULE IDENTIFIER ^( DECLARATIONS ( declaration )* ) ^( BODY ( statement )* ) ) ;
    public final NiklausParser.module_return module() throws RecognitionException {
        NiklausParser.module_return retval = new NiklausParser.module_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token MODULE1=null;
        Token IDENTIFIER2=null;
        Token SEMI3=null;
        Token SEMI5=null;
        Token BEGIN7=null;
        Token SEMI9=null;
        Token END11=null;
        Token SEMI12=null;
        Token EOF13=null;
        NiklausParser.declaration_return declaration4 =null;

        NiklausParser.declaration_return declaration6 =null;

        NiklausParser.statement_return statement8 =null;

        NiklausParser.statement_return statement10 =null;


        CommonTree MODULE1_tree=null;
        CommonTree IDENTIFIER2_tree=null;
        CommonTree SEMI3_tree=null;
        CommonTree SEMI5_tree=null;
        CommonTree BEGIN7_tree=null;
        CommonTree SEMI9_tree=null;
        CommonTree END11_tree=null;
        CommonTree SEMI12_tree=null;
        CommonTree EOF13_tree=null;
        RewriteRuleTokenStream stream_MODULE=new RewriteRuleTokenStream(adaptor,"token MODULE");
        RewriteRuleTokenStream stream_END=new RewriteRuleTokenStream(adaptor,"token END");
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleTokenStream stream_SEMI=new RewriteRuleTokenStream(adaptor,"token SEMI");
        RewriteRuleTokenStream stream_IDENTIFIER=new RewriteRuleTokenStream(adaptor,"token IDENTIFIER");
        RewriteRuleTokenStream stream_BEGIN=new RewriteRuleTokenStream(adaptor,"token BEGIN");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        RewriteRuleSubtreeStream stream_declaration=new RewriteRuleSubtreeStream(adaptor,"rule declaration");
        try {
            // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:53:7: ( MODULE IDENTIFIER SEMI ( declaration ( SEMI declaration )* )? BEGIN ( statement ( SEMI statement )* )? END SEMI EOF -> ^( MODULE IDENTIFIER ^( DECLARATIONS ( declaration )* ) ^( BODY ( statement )* ) ) )
            // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:54:3: MODULE IDENTIFIER SEMI ( declaration ( SEMI declaration )* )? BEGIN ( statement ( SEMI statement )* )? END SEMI EOF
            {
            MODULE1=(Token)match(input,MODULE,FOLLOW_MODULE_in_module92);  
            stream_MODULE.add(MODULE1);


            IDENTIFIER2=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_module94);  
            stream_IDENTIFIER.add(IDENTIFIER2);


            SEMI3=(Token)match(input,SEMI,FOLLOW_SEMI_in_module96);  
            stream_SEMI.add(SEMI3);


            // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:54:26: ( declaration ( SEMI declaration )* )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==CONST||LA2_0==FUNCTION||LA2_0==PROCEDURE||LA2_0==VAR) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:54:27: declaration ( SEMI declaration )*
                    {
                    pushFollow(FOLLOW_declaration_in_module99);
                    declaration4=declaration();

                    state._fsp--;

                    stream_declaration.add(declaration4.getTree());

                    // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:54:39: ( SEMI declaration )*
                    loop1:
                    do {
                        int alt1=2;
                        int LA1_0 = input.LA(1);

                        if ( (LA1_0==SEMI) ) {
                            alt1=1;
                        }


                        switch (alt1) {
                    	case 1 :
                    	    // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:54:40: SEMI declaration
                    	    {
                    	    SEMI5=(Token)match(input,SEMI,FOLLOW_SEMI_in_module102);  
                    	    stream_SEMI.add(SEMI5);


                    	    pushFollow(FOLLOW_declaration_in_module104);
                    	    declaration6=declaration();

                    	    state._fsp--;

                    	    stream_declaration.add(declaration6.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop1;
                        }
                    } while (true);


                    }
                    break;

            }


            BEGIN7=(Token)match(input,BEGIN,FOLLOW_BEGIN_in_module110);  
            stream_BEGIN.add(BEGIN7);


            // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:54:67: ( statement ( SEMI statement )* )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==BEGIN||(LA4_0 >= IDENTIFIER && LA4_0 <= IF)||LA4_0==OUTPUT||LA4_0==REPEAT||LA4_0==WHILE) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:54:68: statement ( SEMI statement )*
                    {
                    pushFollow(FOLLOW_statement_in_module113);
                    statement8=statement();

                    state._fsp--;

                    stream_statement.add(statement8.getTree());

                    // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:54:78: ( SEMI statement )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==SEMI) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:54:79: SEMI statement
                    	    {
                    	    SEMI9=(Token)match(input,SEMI,FOLLOW_SEMI_in_module116);  
                    	    stream_SEMI.add(SEMI9);


                    	    pushFollow(FOLLOW_statement_in_module118);
                    	    statement10=statement();

                    	    state._fsp--;

                    	    stream_statement.add(statement10.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);


                    }
                    break;

            }


            END11=(Token)match(input,END,FOLLOW_END_in_module124);  
            stream_END.add(END11);


            SEMI12=(Token)match(input,SEMI,FOLLOW_SEMI_in_module126);  
            stream_SEMI.add(SEMI12);


            EOF13=(Token)match(input,EOF,FOLLOW_EOF_in_module128);  
            stream_EOF.add(EOF13);


            // AST REWRITE
            // elements: declaration, MODULE, IDENTIFIER, statement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 55:3: -> ^( MODULE IDENTIFIER ^( DECLARATIONS ( declaration )* ) ^( BODY ( statement )* ) )
            {
                // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:55:6: ^( MODULE IDENTIFIER ^( DECLARATIONS ( declaration )* ) ^( BODY ( statement )* ) )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                stream_MODULE.nextNode()
                , root_1);

                adaptor.addChild(root_1, 
                stream_IDENTIFIER.nextNode()
                );

                // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:55:26: ^( DECLARATIONS ( declaration )* )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(DECLARATIONS, "DECLARATIONS")
                , root_2);

                // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:55:41: ( declaration )*
                while ( stream_declaration.hasNext() ) {
                    adaptor.addChild(root_2, stream_declaration.nextTree());

                }
                stream_declaration.reset();

                adaptor.addChild(root_1, root_2);
                }

                // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:55:55: ^( BODY ( statement )* )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(BODY, "BODY")
                , root_2);

                // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:55:62: ( statement )*
                while ( stream_statement.hasNext() ) {
                    adaptor.addChild(root_2, stream_statement.nextTree());

                }
                stream_statement.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "module"


    public static class declaration_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "declaration"
    // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:58:1: declaration : ( constantdeclaration | variabledeclaration | functiondeclaration | proceduredeclaration );
    public final NiklausParser.declaration_return declaration() throws RecognitionException {
        NiklausParser.declaration_return retval = new NiklausParser.declaration_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        NiklausParser.constantdeclaration_return constantdeclaration14 =null;

        NiklausParser.variabledeclaration_return variabledeclaration15 =null;

        NiklausParser.functiondeclaration_return functiondeclaration16 =null;

        NiklausParser.proceduredeclaration_return proceduredeclaration17 =null;



        try {
            // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:58:12: ( constantdeclaration | variabledeclaration | functiondeclaration | proceduredeclaration )
            int alt5=4;
            switch ( input.LA(1) ) {
            case CONST:
                {
                alt5=1;
                }
                break;
            case VAR:
                {
                alt5=2;
                }
                break;
            case FUNCTION:
                {
                alt5=3;
                }
                break;
            case PROCEDURE:
                {
                alt5=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }

            switch (alt5) {
                case 1 :
                    // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:59:3: constantdeclaration
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_constantdeclaration_in_declaration163);
                    constantdeclaration14=constantdeclaration();

                    state._fsp--;

                    adaptor.addChild(root_0, constantdeclaration14.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:60:5: variabledeclaration
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_variabledeclaration_in_declaration169);
                    variabledeclaration15=variabledeclaration();

                    state._fsp--;

                    adaptor.addChild(root_0, variabledeclaration15.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:61:5: functiondeclaration
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_functiondeclaration_in_declaration176);
                    functiondeclaration16=functiondeclaration();

                    state._fsp--;

                    adaptor.addChild(root_0, functiondeclaration16.getTree());

                    }
                    break;
                case 4 :
                    // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:62:5: proceduredeclaration
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_proceduredeclaration_in_declaration183);
                    proceduredeclaration17=proceduredeclaration();

                    state._fsp--;

                    adaptor.addChild(root_0, proceduredeclaration17.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "declaration"


    public static class constantdeclaration_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "constantdeclaration"
    // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:65:1: constantdeclaration : CONST IDENTIFIER COLON TYPE DEFINEDAS expression -> ^( CONST ^( TYPE IDENTIFIER expression ) ) ;
    public final NiklausParser.constantdeclaration_return constantdeclaration() throws RecognitionException {
        NiklausParser.constantdeclaration_return retval = new NiklausParser.constantdeclaration_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token CONST18=null;
        Token IDENTIFIER19=null;
        Token COLON20=null;
        Token TYPE21=null;
        Token DEFINEDAS22=null;
        NiklausParser.expression_return expression23 =null;


        CommonTree CONST18_tree=null;
        CommonTree IDENTIFIER19_tree=null;
        CommonTree COLON20_tree=null;
        CommonTree TYPE21_tree=null;
        CommonTree DEFINEDAS22_tree=null;
        RewriteRuleTokenStream stream_COLON=new RewriteRuleTokenStream(adaptor,"token COLON");
        RewriteRuleTokenStream stream_DEFINEDAS=new RewriteRuleTokenStream(adaptor,"token DEFINEDAS");
        RewriteRuleTokenStream stream_CONST=new RewriteRuleTokenStream(adaptor,"token CONST");
        RewriteRuleTokenStream stream_IDENTIFIER=new RewriteRuleTokenStream(adaptor,"token IDENTIFIER");
        RewriteRuleTokenStream stream_TYPE=new RewriteRuleTokenStream(adaptor,"token TYPE");
        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        try {
            // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:65:20: ( CONST IDENTIFIER COLON TYPE DEFINEDAS expression -> ^( CONST ^( TYPE IDENTIFIER expression ) ) )
            // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:66:3: CONST IDENTIFIER COLON TYPE DEFINEDAS expression
            {
            CONST18=(Token)match(input,CONST,FOLLOW_CONST_in_constantdeclaration199);  
            stream_CONST.add(CONST18);


            IDENTIFIER19=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_constantdeclaration201);  
            stream_IDENTIFIER.add(IDENTIFIER19);


            COLON20=(Token)match(input,COLON,FOLLOW_COLON_in_constantdeclaration203);  
            stream_COLON.add(COLON20);


            TYPE21=(Token)match(input,TYPE,FOLLOW_TYPE_in_constantdeclaration205);  
            stream_TYPE.add(TYPE21);


            DEFINEDAS22=(Token)match(input,DEFINEDAS,FOLLOW_DEFINEDAS_in_constantdeclaration207);  
            stream_DEFINEDAS.add(DEFINEDAS22);


            pushFollow(FOLLOW_expression_in_constantdeclaration209);
            expression23=expression();

            state._fsp--;

            stream_expression.add(expression23.getTree());

            // AST REWRITE
            // elements: TYPE, expression, CONST, IDENTIFIER
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 67:3: -> ^( CONST ^( TYPE IDENTIFIER expression ) )
            {
                // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:67:6: ^( CONST ^( TYPE IDENTIFIER expression ) )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                stream_CONST.nextNode()
                , root_1);

                // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:67:14: ^( TYPE IDENTIFIER expression )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot(
                stream_TYPE.nextNode()
                , root_2);

                adaptor.addChild(root_2, 
                stream_IDENTIFIER.nextNode()
                );

                adaptor.addChild(root_2, stream_expression.nextTree());

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "constantdeclaration"


    public static class variabledeclaration_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "variabledeclaration"
    // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:70:1: variabledeclaration : VAR IDENTIFIER ( COMMA IDENTIFIER )* COLON TYPE -> ^( VAR ( ^( TYPE IDENTIFIER ) )+ ) ;
    public final NiklausParser.variabledeclaration_return variabledeclaration() throws RecognitionException {
        NiklausParser.variabledeclaration_return retval = new NiklausParser.variabledeclaration_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token VAR24=null;
        Token IDENTIFIER25=null;
        Token COMMA26=null;
        Token IDENTIFIER27=null;
        Token COLON28=null;
        Token TYPE29=null;

        CommonTree VAR24_tree=null;
        CommonTree IDENTIFIER25_tree=null;
        CommonTree COMMA26_tree=null;
        CommonTree IDENTIFIER27_tree=null;
        CommonTree COLON28_tree=null;
        CommonTree TYPE29_tree=null;
        RewriteRuleTokenStream stream_COLON=new RewriteRuleTokenStream(adaptor,"token COLON");
        RewriteRuleTokenStream stream_VAR=new RewriteRuleTokenStream(adaptor,"token VAR");
        RewriteRuleTokenStream stream_COMMA=new RewriteRuleTokenStream(adaptor,"token COMMA");
        RewriteRuleTokenStream stream_IDENTIFIER=new RewriteRuleTokenStream(adaptor,"token IDENTIFIER");
        RewriteRuleTokenStream stream_TYPE=new RewriteRuleTokenStream(adaptor,"token TYPE");

        try {
            // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:70:20: ( VAR IDENTIFIER ( COMMA IDENTIFIER )* COLON TYPE -> ^( VAR ( ^( TYPE IDENTIFIER ) )+ ) )
            // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:71:3: VAR IDENTIFIER ( COMMA IDENTIFIER )* COLON TYPE
            {
            VAR24=(Token)match(input,VAR,FOLLOW_VAR_in_variabledeclaration240);  
            stream_VAR.add(VAR24);


            IDENTIFIER25=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_variabledeclaration242);  
            stream_IDENTIFIER.add(IDENTIFIER25);


            // C:\\Users\\Edward\\workspace\\ANTLRTest\\src\\Niklaus.g:71:18: ( COMMA IDENTIFIER )*
            loop6:
            do {
